updates with create passwd

--- a/animals.html
+++ b/animals.html
@@ -9,24 +9,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<h2>Click your favorite animal:</h2>
 <table>
   <tr>
-   	<td><img class="table-cell" src="images/4-ways-cheer-up-depressed-cat.jpg" alt="cat"></td>
-    <td><img class="table-cell" src="images/snake.jpg" alt="snake"></td>
-    <td><img class="table-cell" src="images/dog.jpg" alt="dog"></td>
+   	<td><img id="cat" class="table-cell userchoice animals" src="images/4-ways-cheer-up-depressed-cat.jpg" alt="cat"></td>
+    <td><img id="snake" class="table-cell userchoice animals" src="images/snake.jpg" alt="snake"></td>
+    <td><img id="dog" class="table-cell userchoice animals" src="images/dog.jpg" alt="dog"></td>
   </tr>
   <tr>
-    <td><img class="table-cell" src="images/frog.jpg" alt="frog"></td>
-    <td><img class="table-cell" src="images/Hamster.jpg" alt="hamster"></td>
-    <td><img class="table-cell" src="images/turtle.jpg" alt="turtle"></td>
+    <td><img id="frog" class="table-cell userchoice animals" src="images/frog.jpg" alt="frog"></td>
+    <td><img id="hamster" class="table-cell userchoice animals" src="images/Hamster.jpg" alt="hamster"></td>
+    <td><img id="turtle" class="table-cell userchoice animals" src="images/turtle.jpg" alt="turtle"></td>
   </tr>
   <tr>
-    <td><img class="table-cell" src="images/griffin.jpg" alt="griffin"></td>
-    <td><img class="table-cell" src="images/unicorn.jpg" alt="unicorn"></td>
-    <td><img class="table-cell" src="images/dragon.jpg" alt="dragon"></td>
+    <td><img id="griffin" class="table-cell userchoice animals" src="images/griffin.jpg" alt="griffin"></td>
+    <td><img id="unicorn" class="table-cell userchoice animals" src="images/unicorn.jpg" alt="unicorn"></td>
+    <td><img id="dragon" class="table-cell userchoice animals" src="images/dragon.jpg" alt="dragon"></td>
   </tr>
 </table>
-
+<script type="text/javascript" src="js/scripts.js"></script>
+<button id="logout">Logout</button>
 </body>
 </html>
