--- a/hobbies.html
+++ b/hobbies.html
@@ -10,24 +10,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <h2>Click your favorite hobby:</h2>
   <table>
     <tr>
-      <td><img class="table-cell" src="images/cooking.jpg" alt="Cooking"></td>
-      <td><img class="table-cell" src="images/dancing.jpg" alt="Dancing"></td>
-      <td><img class="table-cell" src="images/drawing.jpg" alt="Drawing"></td>
+      <td><img id="cooking" class="table-cell userchoice hobbies" src="images/cooking.jpg" alt="Cooking"></td>
+      <td><img id="dancing" class="table-cell userchoice hobbies" src="images/dancing.jpg" alt="Dancing"></td>
+      <td><img id="drawing" class="table-cell userchoice hobbies" src="images/drawing.jpg" alt="Drawing"></td>
     </tr>
     <tr>
-      <td><img class="table-cell" src="images/musical instrument.jpg" alt="Musical Instrument"></td>
-      <td><img class="table-cell" src="images/origaming.jpg" alt="Doing Origami"></td>
-      <td><img class="table-cell" src="images/reading.jpg" alt="Reading"></td>
+      <td><img id="musical-instrument" class="table-cell userchoice hobbies" src="images/musical instrument.jpg" alt="Musical Instrument"></td>
+      <td><img id="doing-origami" class="table-cell userchoice hobbies" src="images/origaming.jpg" alt="Doing Origami"></td>
+      <td><img id="reading" class="table-cell userchoice hobbies" src="images/reading.jpg" alt="Reading"></td>
     </tr>
     <tr>
-      <td><img class="table-cell" src="images/sleeping.jpg" alt="Sleeping"></td>
-      <td><img class="table-cell" src="images/swimming.jpg" alt="Swimming"></td>
-      <td><img class="table-cell" src="images/video gaming.jpg" alt="Video Gaming"></td>
+      <td><img id="sleeping" class="table-cell userchoice hobbies" src="images/sleeping.jpg" alt="Sleeping"></td>
+      <td><img id="swimming" class="table-cell userchoice hobbies" src="images/swimming.jpg" alt="Swimming"></td>
+      <td><img id="video-gaming" class="table-cell userchoice hobbies" src="images/video gaming.jpg" alt="Video Gaming"></td>
     </tr>
   </table>
-
+<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
