--- a/color.html
+++ b/color.html
@@ -9,25 +9,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<h2>Click your favorite color:</h2>
 <table>
 	<tr>
-		<td><div class="table-cell" style="background-color: red"></div></td>
-		<td><div class="table-cell" style="background-color: green"></div></td>
-		<td><div class="table-cell" style="background-color: blue"></div></td>
+		<td><div id="red" class="table-cell userchoice color" style="background-color: red"></div></td>
+		<td><div id="green" class="table-cell userchoice color" style="background-color: green"></div></td>
+		<td><div id="blue" class="table-cell userchoice color" style="background-color: blue"></div></td>
 	</tr>
 	<tr>
-		<td><div class="table-cell" style="background-color: yellow"></div></td>
-		<td><div class="table-cell" style="background-color: orange"></div></td>
-		<td><div class="table-cell" style="background-color: purple"></div></td>
+		<td><div id="yellow" class="table-cell userchoice color" style="background-color: yellow"></div></td>
+		<td><div id="orange" class="table-cell userchoice color" style="background-color: orange"></div></td>
+		<td><div id="purple" class="table-cell userchoice color" style="background-color: purple"></div></td>
 	</tr>
 	<tr>
-		<td><div class="table-cell" style="background-color: pink"></div></td>
-		<td><div class="table-cell" style="background-color: black"></div></td>
-		<td><div class="table-cell" style="background-color: grey"></div></td>
+		<td><div id="pink" class="table-cell userchoice color" style="background-color: pink"></div></td>
+		<td><div id="black" class="table-cell userchoice color" style="background-color: black"></div></td>
+		<td><div id="grey" class="table-cell userchoice color" style="background-color: grey"></div></td>
 	</tr>
 
 </table>
-
+<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
