--- a/createpassword.html
+++ b/createpassword.html
@@ -10,11 +10,10 @@
 </head>
 <body>
 
-<h1>Safe Me</h1>
-Hi! Welcome to "Safe Me", a kid-friendly password manager.
-Email: <input type="text" name="email"><br>
-<input id="sign_in_button" type="submit" value="Sign-in">
-<input id="create_account" type="submit" value="Create Account">
+Website: <input type="text" name="website_name"><br>
+Login: <input type="text" name="login_name">
+Password: <input type="text" name="password">
+<input id="save_info" type="submit" value="Save Info">
 
 <script type="text/javascript" src="js/scripts.js"></script>
 <button id="logout">Logout</button>
