--- a/color.html
+++ b/color.html
@@ -4,27 +4,32 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Scripts -->
+		<script src="js/jquery-2.0.3.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="style.css">
+		<!-- Cascading Style Sheets -->
+		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="css/custom.css" rel="stylesheet" media="screen">
 </head>
 <body>
 <h2>Click your favorite color:</h2>
+<br>
 <table>
 	<tr>
-		<td><div id="red" class="table-cell userchoice color" style="background-color: red"></div></td>
-		<td><div id="green" class="table-cell userchoice color" style="background-color: green"></div></td>
-		<td><div id="blue" class="table-cell userchoice color" style="background-color: blue"></div></td>
+		<td><button><div id="red" class="table-cell userchoice color" style="background-color: red"></div></button></td>
+		<td><button><div id="green" class="table-cell userchoice color" style="background-color: green"></div></button></td>
+		<td><button><div id="blue" class="table-cell userchoice color" style="background-color: blue"></div></button></td>
 	</tr>
 	<tr>
-		<td><div id="yellow" class="table-cell userchoice color" style="background-color: yellow"></div></td>
-		<td><div id="orange" class="table-cell userchoice color" style="background-color: orange"></div></td>
-		<td><div id="purple" class="table-cell userchoice color" style="background-color: purple"></div></td>
+		<td><button><div id="yellow" class="table-cell userchoice color" style="background-color: yellow"></div></button></td>
+		<td><button><div id="orange" class="table-cell userchoice color" style="background-color: orange"></div></button></td>
+		<td><button><div id="purple" class="table-cell userchoice color" style="background-color: purple"></div></button></td>
 	</tr>
 	<tr>
-		<td><div id="pink" class="table-cell userchoice color" style="background-color: pink"></div></td>
-		<td><div id="black" class="table-cell userchoice color" style="background-color: black"></div></td>
-		<td><div id="grey" class="table-cell userchoice color" style="background-color: grey"></div></td>
+		<td><button><div id="pink" class="table-cell userchoice color" style="background-color: pink"></div></button></td>
+		<td><button><div id="black" class="table-cell userchoice color" style="background-color: black"></div></button></td>
+		<td><button><div id="grey" class="table-cell userchoice color" style="background-color: grey"></div></button></td>
 	</tr>
 
 </table>
