--- a/hobbies.html
+++ b/hobbies.html
@@ -5,27 +5,32 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Scripts -->
+		<script src="js/jquery-2.0.3.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="style.css">
+		<!-- Cascading Style Sheets -->
+		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="css/custom.css" rel="stylesheet" media="screen">
 </head>
 <body>
   <h2>Click your favorite hobby:</h2>
-  <table>
+  <br>
+  <table cellpadding="10">
     <tr>
-      <td><img id="cooking" class="table-cell userchoice hobbies" src="images/cooking.jpg" alt="Cooking"></td>
-      <td><img id="dancing" class="table-cell userchoice hobbies" src="images/dancing.jpg" alt="Dancing"></td>
-      <td><img id="drawing" class="table-cell userchoice hobbies" src="images/drawing.jpg" alt="Drawing"></td>
+      <td><button><img id="cooking" class="table-cell userchoice hobbies" src="images/cooking.jpg" alt="Cooking"></button></td>
+      <td><button><img id="dancing" class="table-cell userchoice hobbies" src="images/dancing.jpg" alt="Dancing"></button></td>
+      <td><button><img id="drawing" class="table-cell userchoice hobbies" src="images/drawing.jpg" alt="Drawing"></button></td>
     </tr>
     <tr>
-      <td><img id="musical-instrument" class="table-cell userchoice hobbies" src="images/musical instrument.jpg" alt="Musical Instrument"></td>
-      <td><img id="doing-origami" class="table-cell userchoice hobbies" src="images/origaming.jpg" alt="Doing Origami"></td>
-      <td><img id="reading" class="table-cell userchoice hobbies" src="images/reading.jpg" alt="Reading"></td>
+      <td><button><img id="musical-instrument" class="table-cell userchoice hobbies" src="images/musical instrument.jpg" alt="Musical Instrument"></button></td>
+      <td><button><img id="doing-origami" class="table-cell userchoice hobbies" src="images/origaming.jpg" alt="Doing Origami"></button></td>
+      <td><button><img id="reading" class="table-cell userchoice hobbies" src="images/reading.jpg" alt="Reading"></button></td>
     </tr>
     <tr>
-      <td><img id="sleeping" class="table-cell userchoice hobbies" src="images/sleeping.jpg" alt="Sleeping"></td>
-      <td><img id="swimming" class="table-cell userchoice hobbies" src="images/swimming.jpg" alt="Swimming"></td>
-      <td><img id="video-gaming" class="table-cell userchoice hobbies" src="images/video gaming.jpg" alt="Video Gaming"></td>
+      <td><button><img id="sleeping" class="table-cell userchoice hobbies" src="images/sleeping.jpg" alt="Sleeping"></button></td>
+      <td><button><img id="swimming" class="table-cell userchoice hobbies" src="images/swimming.jpg" alt="Swimming"></button></td>
+      <td><button><img id="video-gaming" class="table-cell userchoice hobbies" src="images/video gaming.jpg" alt="Video Gaming"></button></td>
     </tr>
   </table>
 <script type="text/javascript" src="js/scripts.js"></script>
