--- a/passwordscreen.html
+++ b/passwordscreen.html
@@ -1,13 +1,31 @@
 <html>
 
 <head>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <link rel="stylesheet" href="style.css">
+    <!-- Scripts -->
+    <script src="js/jquery-2.0.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Cascading Style Sheets -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="css/custom.css" rel="stylesheet" media="screen">
+
 </head>
 <body>
-  <table id="passwordtable">
+  <h3>Your Passwords:</h3>
+  <table class="table table-striped" id="passwordtable">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Website Name</th>
+        <th scope="col">Login</th>
+        <th scope="col">Copy Password</th>
+      </tr>
+    </thead>
   </table>
+  <br>
 <button id="addpassword">Add a Password</button>
 <button id="logout">Logout</button>
 
