--- a/popup_sign_in.html
+++ b/popup_sign_in.html
@@ -5,15 +5,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Scripts -->
+    <script src="js/jquery-2.0.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Cascading Style Sheets -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="css/custom.css" rel="stylesheet" media="screen">
 
 </head>
 <body>
 
 <h1>Safe Me</h1>
-Hi! Welcome to "Safe Me", a kid-friendly password manager.
-Email: <input type="text" name="email"><br>
+<h4>Hi! Welcome to "Safe Me", a kid-friendly password manager.</h4>
+<br>
+Email: <input type="text" name="email">
+<br>
+<br>
 <input id="sign_in_button" type="submit" value="Sign-in">
+
 <input id="create_account" type="submit" value="Create Account">
 
 <script type="text/javascript" src="js/scripts.js"></script>
