--- a/createpassword.html
+++ b/createpassword.html
@@ -5,14 +5,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Scripts -->
+		<script src="js/jquery-2.0.3.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+
+		<!-- Cascading Style Sheets -->
+		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="css/custom.css" rel="stylesheet" media="screen">
 
 </head>
 <body>
-
-Website: <input type="text" name="website_name"><br>
-Login: <input type="text" name="login_name">
-Password: <input type="text" name="password">
+  <h4>Add an Item to your List of Passwords:</h4>
+<br>
+Website: <input id="website_name" type="text" name="website_name">
+<br>
+Login: <input id="login_id" type="text" name="login_name">
+<br>
+Password: <input id="passwd" type="password" name="password">
+<br>
+<br>
 <input id="save_info" type="submit" value="Save Info">
 
 <script type="text/javascript" src="js/scripts.js"></script>
