--- a/color.html
+++ b/color.html
@@ -13,8 +13,9 @@
 		<link href="css/custom.css" rel="stylesheet" media="screen">
 </head>
 <body>
-<h2>Click your favorite color:</h2>
+<center><h2>Click your favorite color:</h2></center>
 <br>
+<center>
 <table>
 	<tr>
 		<td><button><div id="red" class="table-cell userchoice color" style="background-color: red"></div></button></td>
@@ -31,8 +32,9 @@
 		<td><button><div id="black" class="table-cell userchoice color" style="background-color: black"></div></button></td>
 		<td><button><div id="grey" class="table-cell userchoice color" style="background-color: grey"></div></button></td>
 	</tr>
-
 </table>
+</center>
+<a id="back-button" href="animals.html" class="btn btn-info" role="button">Go Back</a>
 <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
