--- a/passwordscreen.html
+++ b/passwordscreen.html
@@ -15,9 +15,10 @@
 
 </head>
 <body>
+  <center>
   <h3>Your Passwords:</h3>
   <table class="table table-striped" id="passwordtable">
-    <thead class="thead-dark">
+    <thead>
       <tr>
         <th scope="col">Website Name</th>
         <th scope="col">Login</th>
@@ -26,9 +27,11 @@
     </thead>
   </table>
   <br>
-<button id="addpassword">Add a Password</button>
-<button id="logout">Logout</button>
+</center>
+<a href="createpassword.html" class="btn btn-primary" role="button">Add a Password</a>
+<button type="button" class="btn btn-primary" id="logout">Logout</button>
 
 <script type="text/javascript" src="js/scripts.js"></script>
+
 </body>
 </html>
