--- a/animals.html
+++ b/animals.html
@@ -13,7 +13,7 @@
   <link href="css/custom.css" rel="stylesheet" media="screen">
 </head>
 <body>
-<h2>Click your favorite animal:</h2>
+<center><h2>Click your favorite animal:</h2></center>
 <br>
 <center>
 <table>
@@ -34,8 +34,7 @@
   </tr>
 </table>
 </center>
-
-<button id="logout">Logout</button>
+<a id="back-button" href="popup_sign_in.html" class="btn btn-info" role="button">Go Back</a>
 <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
