--- a/createpassword.html
+++ b/createpassword.html
@@ -15,18 +15,18 @@
 
 </head>
 <body>
-  <h4>Add an Item to your List of Passwords:</h4>
+  <center><h4>Add an Item to your List of Passwords:</h4></center>
 <br>
 Website: <input id="website_name" type="text" name="website_name">
 <br>
 Login: <input id="login_id" type="text" name="login_name">
 <br>
 Password: <input id="passwd" type="password" name="password">
+<button class="btn btn-success" id="generate_passwd">Generate Password</button>
 <br>
 <br>
-<input id="save_info" type="submit" value="Save Info">
-
+<button id="save_info" type="button" class="btn btn-primary">Save Info</button>
+<a id="back-button" href="passwordscreen.html" class="btn btn-primary" role="button">Cancel</a>
 <script type="text/javascript" src="js/scripts.js"></script>
-<button id="logout">Logout</button>
 </body>
 </html>
