--- a/hobbies.html
+++ b/hobbies.html
@@ -14,8 +14,9 @@
 		<link href="css/custom.css" rel="stylesheet" media="screen">
 </head>
 <body>
-  <h2>Click your favorite hobby:</h2>
+  <center><h2>Click your favorite hobby:</h2></center>
   <br>
+  <center>
   <table cellpadding="10">
     <tr>
       <td><button><img id="cooking" class="table-cell userchoice hobbies" src="images/cooking.jpg" alt="Cooking"></button></td>
@@ -33,6 +34,8 @@
       <td><button><img id="video-gaming" class="table-cell userchoice hobbies" src="images/video gaming.jpg" alt="Video Gaming"></button></td>
     </tr>
   </table>
+</center>
+<a id="back-button" href="color.html" class="btn btn-info" role="button">Go Back</a>
 <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
