--- a/passwordscreen.html
+++ b/passwordscreen.html
@@ -26,6 +26,7 @@
       </tr>
     </thead>
   </table>
+  <div id="password_message"></div>
   <br>
 </center>
 <a href="createpassword.html" class="btn btn-primary" role="button">Add a Password</a>
