--- a/createpassword.html
+++ b/createpassword.html
@@ -22,6 +22,7 @@ Website: <input id="website_name" type="text" name="website_name">
 Login: <input id="login_id" type="text" name="login_name">
 <br>
 Password: <input id="passwd" type="password" name="password">
+<button><img src="images/copy-image.png" id="copy-img" height="20px" width="20px"></button>
 <button class="btn btn-success" id="generate_passwd">Generate Password</button>
 <br>
 <br>
